# Koppeltaal-2.0-Authentication-Service

./: .gitignore  .pylintrc  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  entrypoint.py  pyproject.toml  requirements.txt  uuid_conversions.sql
.github/workflows/: docker-image.yml
application/: __init__.py  app.py  database.py  utils.py
application/fhir_client/: __init__.py  service.py
application/fhir_logging_client/: service.py
application/idp_client/: service.py  views.py
application/irma_client/: __init__.py  service.py
application/jwks/: service.py  views.py
application/oauth_server/: __init__.py  guid.py  jwks_client.py  model.py  scopes.py  service.py  verifiers.py  views.py
application/oidc_server/: guid.py  model.py  service.py  views.py
application/templates/: oauth2_consent.html
docs/superpowers/plans/: 2026-06-12-auditevent-topic11-split.md
docs/superpowers/specs/: 2026-06-12-auditevent-topic11-design.md
instance/: config.py
sql_updates/: 02_column_text_changes.sql  03_add_idp_relation.sql  04_add_prompt.sql
test/: test_code_challenge.py  test_fhir_logging_service.py  test_flask_application.py  test_idp_selection.py  test_introspect.py  test_jwks_client.py  test_oauth_flows.py  test_rel_pers_launch.py  test_scopes.py  test_utils.py  utils.py
