[tool.poetry]
name = "koppeltaal-2-0-authentication-service"
version = "0.1.0"
description = ""
authors = ["Roland Groen <roland@edia.nl>"]
license = "Mozilla Public License Version 2.0"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.8"
flask = "2.1.0"
flask-cors = "3.0.10"
flask-sqlalchemy = "2.5.1"
sqlalchemy = "1.4.46"
waitress = "1.4.4"
authlib = "0.15.5"
requests = "2.32.3"
flask-behind-proxy = "0.1.1"
basicauth = "0.4.1"
psycopg2 = "2.9.6"
pymysql = "1.0.2"
pyjwt = "2.6.0"
requests-cache = "1.0.0"
fhir-resources = "6.4.0"
pydantic = "1.10.8"
Werkzeug = "2.2.2"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "7.2.2"
pytest-mock = "3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
