[tool.poetry]
name = "koppeltaal-2-0-authentication-service"
version = "0.1.0"
description = ""
authors = ["Roland Groen <roland@edia.nl>"]
license = "Mozilla Public License Version 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9.2"
flask = "2.3.3"
flask-cors = "5.0.0"
flask-sqlalchemy = "3.1.1"
sqlalchemy = "2.0.46"
waitress = "3.0.2"
authlib = "1.4.1"
requests = "2.32.5"
flask-behind-proxy = "0.1.1"
basicauth = "1.0.0"
psycopg2 = "2.9.11"
pymysql = "1.1.2"
pyjwt = "2.11.0"
requests-cache = "1.2.1"
fhir-resources = "6.4.0"
pydantic = "1.10.21"
Werkzeug = "3.1.5"
cryptography = "46.0.5"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "7.2.2"
pytest-mock = "3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
